--- a/frontend/src/style/_forms.scss
+++ b/frontend/src/style/_forms.scss
@@ -1,7 +1,12 @@
-input[type="text"] {
+input[type="text"],
+textarea {
   border: 1px solid var(--color-scale-a-5-100);
   background-color: var(--color-scale-a-6-75);
   padding: 0.125rem 0.25rem;
+}
+
+textarea {
+  resize: none;
 }
 
 .blank-field {
