--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -45,7 +45,9 @@
 
   --color-changes-bg: var(--color-scale-a-8-100);
   --color-changes-list-bg: var(--color-scale-a-7-100);
+  --color-changes-list-bg-hover: var(--color-scale-a-6-100);
   --color-changes-border: var(--color-scale-a-8-75);
+  --color-changes-sep: var(--color-scale-a-9-100);
 
   --color-text: var(--color-scale-white);
   --color-text-muted: var(--color-scale-a-2-100);
