--- a/frontend/src/style/_sidebar.scss
+++ b/frontend/src/style/_sidebar.scss
@@ -1,3 +1,12 @@
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  width: var(--sidebar-width);
+  overflow: visible;
+  height: calc(100% - var(--title-bar-height));
+  border-right: 1px solid var(--color-sidebar-border);
+}
+
 .sidebar-big-button {
   height: 4rem;
   width: 100%;
