--- a/frontend/src/style/_repo-info.scss
+++ b/frontend/src/style/_repo-info.scss
@@ -5,4 +5,17 @@
     padding: 0 1.5rem;
     font-weight: normal;
   }
+
+  &__things {
+    display: flex;
+    margin: 0 1.5rem;
+    column-gap: 1.5rem;
+
+    svg {
+      vertical-align: middle;
+      margin-right: 0.25rem;
+      margin-top: -0.25rem;
+      fill: var(--color-text);
+    }
+  }
 }
