--- a/frontend/src/style/_modal.scss
+++ b/frontend/src/style/_modal.scss
@@ -55,6 +55,10 @@
     text-align: right;
     border-top: 1px solid var(--color-modal-border);
     padding: 1rem;
+
+    .btn:disabled {
+      background-color: var(--color-scale-a-6-50);
+    }
   }
 
   &__checkboxes {
