--- a/frontend/src/style/_buttons.scss
+++ b/frontend/src/style/_buttons.scss
@@ -8,6 +8,12 @@
   font-size: 1rem;
   padding: 0.5rem 1rem;
   margin: 0;
+  border-radius: 0.25rem;
+  @include no-select;
+
+  & + & {
+    margin-left: 0.25rem;
+  }
 
   svg {
     margin-left: 0.5rem;
@@ -53,6 +59,7 @@
 
 .btn-drop {
   position: relative;
+  border-radius: 0;
 
   &::after {
     content: "";
@@ -82,6 +89,7 @@
   background-color: transparent;
   color: var(--color-text);
   cursor: pointer;
+  border-radius: 0;
 
   &:hover {
     background-color: var(--color-btn-bg-hover);
