--- a/frontend/src/style/_changes.scss
+++ b/frontend/src/style/_changes.scss
@@ -1,9 +1,10 @@
+@use "!mixins" as *;
+
 .changes {
   text-align: left;
   background-color: var(--color-changes-bg);
   flex: 2;
-  user-select: none;
-  -webkit-user-select: none;
+  @include no-select;
 
   &__header {
     font-size: 0.9rem;
