--- a/frontend/src/style/_getting-started.scss
+++ b/frontend/src/style/_getting-started.scss
@@ -1,11 +1,12 @@
+@use "!mixins" as *;
+
 .getting-started {
   display: flex;
   justify-content: center;
   align-items: center;
   height: calc(100vh - var(--title-bar-height));
   width: 100%;
-  user-select: none;
-  -webkit-user-select: none;
+  @include no-select;
   pointer-events: none;
   // Gravity
   padding-bottom: 2rem;
