--- a/frontend/src/style/_modal.scss
+++ b/frontend/src/style/_modal.scss
@@ -1,3 +1,5 @@
+@use "!mixins" as *;
+
 .modal {
   --color-btn-bg: var(--color-scale-a-6-100);
   --color-btn-border: var(--color-scale-a-7-100);
@@ -55,6 +57,7 @@
     text-align: right;
     border-top: 1px solid var(--color-modal-border);
     padding: 1rem;
+    @include no-select;
 
     .btn:disabled {
       background-color: var(--color-scale-a-6-50);
