--- a/frontend/src/style/_settings.scss
+++ b/frontend/src/style/_settings.scss
@@ -14,10 +14,19 @@
   &__option {
     flex: 1;
     border: 0.25rem solid var(--color-scale-a-7-100);
+    border-radius: 0;
+
+    &:hover {
+      border-color: var(--color-btn-bg-hover);
+    }
 
     &--active {
       background-color: var(--color-scale-a-6-100);
       border-color: var(--color-scale-a-5-100);
+
+      &:hover {
+        border-color: var(--color-scale-a-5-100);
+      }
     }
   }
 
