feat: add support for empty repo

--- a/frontend/src/style/_buttons.scss
+++ b/frontend/src/style/_buttons.scss
@@ -101,7 +101,7 @@
 
   &.x {
     &:hover {
-      background-color: var(--color-red-800);
+      background-color: var(--color-scale-r-6-100);
     }
   }
 }
