--- a/frontend/src/style/_changes.scss
+++ b/frontend/src/style/_changes.scss
@@ -61,7 +61,6 @@
   align-items: center;
   border-bottom: 1px solid var(--color-changes-border);
   background-color: var(--color-changes-list-bg);
-  padding: 0 1.5rem 0 0;
   min-height: 3rem;
   cursor: pointer;
 
@@ -92,6 +91,7 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    padding: 0 0.5rem 0 1.5rem;
   }
 
   &__filename {
