refactor: consolidate `code` style

--- a/frontend/src/style/_main.scss
+++ b/frontend/src/style/_main.scss
@@ -77,9 +77,7 @@ pre {
 }
 
 code {
-  border-radius: 0.25rem;
-  padding: 0.08rem 0.35rem;
-  background-color: var(--color-scale-a-4-25);
+  color: var(--color-scale-l-1-100);
 }
 
 .overlay {
