feat: remote actions on sidebar

--- a/frontend/src/style/_changes.scss
+++ b/frontend/src/style/_changes.scss
@@ -4,6 +4,7 @@
   text-align: left;
   background-color: var(--color-changes-bg);
   flex: 2;
+  overflow-y: auto;
   @include no-select;
 
   &__header {
