--- a/frontend/src/style/_sidebar.scss
+++ b/frontend/src/style/_sidebar.scss
@@ -72,3 +72,24 @@
     }
   }
 }
+
+.sidebar-remote-actions {
+  background-color: var(--color-changes-bg);
+  padding: 0.5rem 1rem;
+
+  display: flex;
+
+  .btn {
+    flex: 1;
+    font-size: 0.9rem;
+    padding: 0.25rem 0.75rem;
+
+    .icon {
+      pointer-events: none;
+    }
+
+    svg {
+      margin: -0.1rem 0.2rem 0 -0.5rem;
+    }
+  }
+}
