--- a/frontend/src/style/_settings.scss
+++ b/frontend/src/style/_settings.scss
@@ -5,6 +5,20 @@
   h2 {
     margin: 0 0 1rem;
   }
+
+  h3 {
+    margin: 1rem 0 0;
+    padding: 0.5rem 0 0;
+    border-top: 1px solid var(--color-scale-a-7-100);
+  }
+}
+
+.setting {
+  &__name {
+    margin: 0.5rem 0;
+    color: var(--color-text-muted);
+    font-weight: normal;
+  }
 }
 
 .big-option {
