--- a/frontend/src/style/_modal.scss
+++ b/frontend/src/style/_modal.scss
@@ -19,6 +19,8 @@
     justify-content: space-between;
     flex-direction: column;
     text-align: left;
+    min-width: 30rem;
+    max-width: 75vw;
   }
 
   &__heading {
