--- a/frontend/src/style/_stashes.scss
+++ b/frontend/src/style/_stashes.scss
@@ -4,5 +4,10 @@
   h2 {
     padding: 0 1.5rem;
     font-weight: normal;
+    margin: 2rem 0 1rem;
+
+    &:first-child {
+      margin-top: 1.5rem;
+    }
   }
 }
