--- a/frontend/src/style/_remotes.scss
+++ b/frontend/src/style/_remotes.scss
@@ -7,6 +7,11 @@
   h2 {
     padding: 0 1.5rem;
     font-weight: normal;
+    margin: 2rem 0 1rem;
+
+    &:first-child {
+      margin-top: 1.5rem;
+    }
   }
 
   table {
