--- a/frontend/src/style/style.scss
+++ b/frontend/src/style/style.scss
@@ -14,9 +14,9 @@
 @use "tree";
 @use "repo-info";
 @use "remotes";
-@use "stashes";
 @use "getting-started";
 @use "forms";
 @use "settings";
 @use "make-commit";
+@use "details";
 @use "code-breakdown";
