--- a/frontend/src/style/_commits.scss
+++ b/frontend/src/style/_commits.scss
@@ -1,11 +1,11 @@
 @use "!mixins" as *;
 
 .commits {
-  width: calc(100% - var(--resize-bar-width));
-  height: calc(100vh - var(--tabs-height) - var(--title-bar-height) - var(--resize-bar-width));
+  width: 100%;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  height: 100%;
 
   &.dragging {
     @include no-select;
@@ -14,7 +14,7 @@
 
   &__table-container {
     overflow: auto;
-    height: calc(100% - var(--commit-details-height));
+    height: 100%;
   }
 
   &__table {
