--- a/frontend/src/style/_repo-info.scss
+++ b/frontend/src/style/_repo-info.scss
@@ -1,15 +1,7 @@
+@use '!mixins' as *;
+
 .repo-info {
   text-align: left;
-
-  h2 {
-    padding: 0 1.5rem;
-    font-weight: normal;
-    margin: 2rem 0 1rem;
-
-    &:first-child {
-      margin-top: 1.5rem;
-    }
-  }
 
   &__things {
     display: flex;
