wip: toggle lines

--- a/frontend/src/style/_colors.scss
+++ b/frontend/src/style/_colors.scss
@@ -117,7 +117,7 @@ $color-scale: (
     6: #6e40c9,
     7: #553098,
     8: #3c1e70,
-    9: #271052,
+    9: #270f52,
   ),
   a: (
     0: #f0f6fc,
