--- a/frontend/src/style/_variables.scss
+++ b/frontend/src/style/_variables.scss
@@ -90,6 +90,9 @@
   --color-diff-line-no: var(--color-scale-a-3-100);
   --color-diff-hunk-details: var(--color-scale-a-1-100);
   --color-diff-hunk-heading: var(--color-scale-a-3-100);
+  --color-diff-toggle-bg: var(--color-scale-p-6-75);
+  --color-diff-toggle-bg2: var(--color-scale-p-7-75);
+  --color-diff-toggle-bg-off: var(--color-scale-a-6-25);
 
   --title-bar-height: 2.25rem;
   --sidebar-width: 25rem;
