--- a/frontend/src/style/_diff.scss
+++ b/frontend/src/style/_diff.scss
@@ -11,11 +11,11 @@
 
   &__grid {
     display: grid;
-    grid-template-columns: min-content min-content auto;
+    grid-template-columns: min-content min-content min-content auto;
   }
 
   &__hunk-header {
-    grid-column: 1 / span 3;
+    grid-column: 1 / span 4;
     padding: 1rem 1.25rem;
     background-color: var(--color-diff-line-bg-hunk-header);
     @include no-select;
@@ -29,67 +29,112 @@
     color: var(--color-diff-hunk-heading);
   }
 
-  &__line,
-  &__line-no,
-  &__line-type {
-    white-space: pre;
-    padding: 0.25rem 0.5rem;
-  }
-
-  &__line-no {
-    min-width: 3rem;
-    text-align: right;
-    color: var(--color-diff-line-no);
-    @include no-select;
-  }
-
-  &__line-type {
-    @include no-select;
-
-    &.diff-line--DiffAddLine {
-      &::before {
-        color: var(--color-diff-line-add);
-        content: '+';
-      }
-    }
-
-    &.diff-line--DiffDeleteLine {
-      &::before {
-        color: var(--color-diff-line-delete);
-        content: '-';
-      }
-    }
-  }
-
   &__line {
-    position: relative;
+    display: contents;
 
-    &--nonewline {
-      &::after {
-        position: absolute;
-        left: 0;
-        bottom: -0.75rem;
-        width: 1rem;
-        height: 1rem;
-        pointer-events: none;
-        content: '';
-        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="red" d="M6 0a6 6 0 1 1 0 12A6 6 0 0 1 6 0Zm3 5H3v2h6Z"/></svg>');
-        background-size: contain;
+    &--DiffContextLine {
+      > div {
+        background-color: var(--color-diff-line-bg-context);
+      }
+    }
+  
+    &--DiffAddLine {
+      > div {
+        background-color: var(--color-diff-line-bg-add);
+      }
+    }
+  
+    &--DiffDeleteLine {
+      > div {
+        background-color: var(--color-diff-line-bg-delete);
+      }
+    }
+
+    &--DiffAddLine,
+    &--DiffDeleteLine {
+      cursor: pointer;
+    }
+
+    &--on {
+      .diff__line-toggle {
+        background-color: var(--color-diff-toggle-bg);
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="rgba(0 0 0 / 50%)" d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"/></svg>');
+        background-size: 50%;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+
+      .diff__line-no {
+        background-color: var(--color-diff-toggle-bg2);
+      }
+    }
+
+    &--off {
+      .diff__line-toggle {
+        background-color: var(--color-diff-toggle-bg-off);
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="rgba(255 255 255 / 10%)" d="M3.72 3.72a.75.75 0 0 1 1.06 0L8 6.94l3.22-3.22a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L9.06 8l3.22 3.22a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L8 9.06l-3.22 3.22a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042L6.94 8 3.72 4.78a.75.75 0 0 1 0-1.06Z"/></svg>');
+        background-size: 50%;
         background-position: center;
         background-repeat: no-repeat;
       }
     }
-  }
 
-  .diff-line--DiffContextLine {
-    background-color: var(--color-diff-line-bg-context);
-  }
+    &-toggle {
+      width: 3rem;
+      border-right: 2px solid rgb(0 0 0 / 25%);
+    }
 
-  .diff-line--DiffAddLine {
-    background-color: var(--color-diff-line-bg-add);
-  }
+    &-code,
+    &-no,
+    &-type {
+      white-space: pre;
+      padding: 0.25rem 0.5rem;
+    }
 
-  .diff-line--DiffDeleteLine {
-    background-color: var(--color-diff-line-bg-delete);
+    &-no {
+      min-width: 3rem;
+      text-align: right;
+      color: var(--color-diff-line-no);
+      border-right: 2px solid rgb(0 0 0 / 25%);
+      @include no-select-click;
+    }
+  
+    &-type {
+      @include no-select-click;
+  
+      .diff__line--DiffAddLine & {
+        &::before {
+          color: var(--color-diff-line-add);
+          content: '+';
+        }
+      }
+  
+      .diff__line--DiffDeleteLine & {
+        &::before {
+          color: var(--color-diff-line-delete);
+          content: '-';
+        }
+      }
+    }
+
+    &-code {
+      position: relative;
+  
+      &--nonewline {
+        &::after {
+          position: absolute;
+          left: 0;
+          bottom: -0.75rem;
+          width: 1rem;
+          height: 1rem;
+          pointer-events: none;
+          content: '';
+          background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12"><path fill="red" d="M6 0a6 6 0 1 1 0 12A6 6 0 0 1 6 0Zm3 5H3v2h6Z"/></svg>');
+          background-size: contain;
+          background-position: center;
+          background-repeat: no-repeat;
+        }
+      }
+    }
   }
 }
