--- a/frontend/src/style/_diff.scss
+++ b/frontend/src/style/_diff.scss
@@ -11,11 +11,11 @@
 
   &__grid {
     display: grid;
-    grid-template-columns: min-content min-content min-content auto;
+    grid-template-columns: min-content min-content min-content min-content auto;
   }
 
   &__hunk-header {
-    grid-column: 1 / span 4;
+    grid-column: 1 / span 5;
     padding: 1rem 1.25rem;
     background-color: var(--color-diff-line-bg-hunk-header);
     @include no-select;
@@ -27,6 +27,10 @@
 
   &__hunk-heading {
     color: var(--color-diff-hunk-heading);
+  }
+
+  &__row {
+    display: contents;
   }
 
   &__line {
@@ -47,6 +51,12 @@
     &--DiffDeleteLine {
       > div {
         background-color: var(--color-diff-line-bg-delete);
+      }
+    }
+
+    &:hover {
+      > div {
+        filter: brightness(1.3);
       }
     }
 
@@ -79,8 +89,19 @@
       }
     }
 
+    &-toggle-minihunk {
+      width: 1.5rem;
+      border-right: 2px solid rgb(0 0 0 / 25%);
+      background-color: var(--color-diff-toggle-bg-off) !important;
+      @include no-select-click;
+
+      &--hover {
+        background-color: var(--color-diff-toggle-bg2) !important;
+      }
+    }
+
     &-toggle {
-      width: 3rem;
+      width: 2.5rem;
       border-right: 2px solid rgb(0 0 0 / 25%);
     }
 
@@ -101,6 +122,7 @@
   
     &-type {
       @include no-select-click;
+      border-right: 1px solid rgb(0 0 0 / 20%);
   
       .diff__line--DiffAddLine & {
         &::before {
