--- a/frontend/src/style/_diff.scss
+++ b/frontend/src/style/_diff.scss
@@ -36,64 +36,15 @@
   &__line {
     display: contents;
 
-    &--DiffContextLine {
-      > div {
-        background-color: var(--color-diff-line-bg-context);
-      }
-    }
-  
-    &--DiffAddLine {
-      > div {
-        background-color: var(--color-diff-line-bg-add);
-      }
-    }
-  
-    &--DiffDeleteLine {
-      > div {
-        background-color: var(--color-diff-line-bg-delete);
-      }
-    }
-
-    &:hover {
-      > div {
-        filter: brightness(1.3);
-      }
-    }
-
-    &--DiffAddLine,
-    &--DiffDeleteLine {
-      cursor: pointer;
-    }
-
-    &--on {
-      .diff__line-toggle {
-        background-color: var(--color-diff-toggle-bg);
-        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="rgba(0 0 0 / 50%)" d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"/></svg>');
-        background-size: 50%;
-        background-position: center;
-        background-repeat: no-repeat;
-      }
-
-      .diff__line-no {
-        background-color: var(--color-diff-toggle-bg2);
-      }
-    }
-
-    &--off {
-      .diff__line-toggle {
-        background-color: var(--color-diff-toggle-bg-off);
-        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="rgba(255 255 255 / 10%)" d="M3.72 3.72a.75.75 0 0 1 1.06 0L8 6.94l3.22-3.22a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L9.06 8l3.22 3.22a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L8 9.06l-3.22 3.22a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042L6.94 8 3.72 4.78a.75.75 0 0 1 0-1.06Z"/></svg>');
-        background-size: 50%;
-        background-position: center;
-        background-repeat: no-repeat;
-      }
-    }
-
     &-toggle-minihunk {
       width: 1.5rem;
       border-right: 2px solid rgb(0 0 0 / 25%);
       background-color: var(--color-diff-toggle-bg-off) !important;
-      @include no-select-click;
+      @include no-select;
+
+      &--click {
+        cursor: pointer;
+      }
 
       &--hover {
         background-color: var(--color-diff-toggle-bg2) !important;
@@ -117,14 +68,21 @@
       text-align: right;
       color: var(--color-diff-line-no);
       border-right: 2px solid rgb(0 0 0 / 25%);
-      @include no-select-click;
+      @include no-select;
+
+      .diff__line--DiffAddLine &,
+      .diff__line--DiffDeleteLine & {
+        cursor: pointer;
+      }
     }
   
     &-type {
-      @include no-select-click;
+      @include no-select;
       border-right: 1px solid rgb(0 0 0 / 20%);
   
       .diff__line--DiffAddLine & {
+        cursor: pointer;
+
         &::before {
           color: var(--color-diff-line-add);
           content: '+';
@@ -132,6 +90,8 @@
       }
   
       .diff__line--DiffDeleteLine & {
+        cursor: pointer;
+
         &::before {
           color: var(--color-diff-line-delete);
           content: '-';
@@ -156,6 +116,59 @@
           background-position: center;
           background-repeat: no-repeat;
         }
+      }
+    }
+
+    &--DiffContextLine {
+      > div {
+        background-color: var(--color-diff-line-bg-context);
+      }
+    }
+  
+    &--DiffAddLine {
+      > div {
+        background-color: var(--color-diff-line-bg-add);
+      }
+    }
+  
+    &--DiffDeleteLine {
+      > div {
+        background-color: var(--color-diff-line-bg-delete);
+      }
+    }
+
+    &--DiffAddLine,
+    &--DiffDeleteLine {
+      cursor: pointer;
+
+      &:hover {
+        > div {
+          filter: brightness(1.3);
+        }
+      }
+    }
+
+    &--on {
+      .diff__line-toggle {
+        background-color: var(--color-diff-toggle-bg);
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="rgba(0 0 0 / 50%)" d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"/></svg>');
+        background-size: 50%;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+
+      .diff__line-no {
+        background-color: var(--color-diff-toggle-bg2);
+      }
+    }
+
+    &--off {
+      .diff__line-toggle {
+        background-color: var(--color-diff-toggle-bg-off);
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="rgba(255 255 255 / 10%)" d="M3.72 3.72a.75.75 0 0 1 1.06 0L8 6.94l3.22-3.22a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L9.06 8l3.22 3.22a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L8 9.06l-3.22 3.22a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042L6.94 8 3.72 4.78a.75.75 0 0 1 0-1.06Z"/></svg>');
+        background-size: 50%;
+        background-position: center;
+        background-repeat: no-repeat;
       }
     }
   }
