--- a/frontend/src/style/_diffs.scss
+++ b/frontend/src/style/_diffs.scss
@@ -5,6 +5,18 @@
   flex-direction: column;
   height: 100%;
 
+  &__hash {
+    text-align: left;
+    padding: 0.75rem 1.25rem 0.125rem;
+    color: var(--color-text-muted);
+  }
+
+  &__filename {
+    text-align: left;
+    // gravity
+    padding: 0.125rem 1.25rem 0.8rem;
+  }
+
   .diff-actions {
     flex: min-content;
     padding: 0.5rem;
