feat: create new repo

--- a/frontend/src/style/_forms.scss
+++ b/frontend/src/style/_forms.scss
@@ -4,8 +4,9 @@ input[type="text"],
 textarea {
   border: 1px solid var(--color-scale-a-5-100);
   background-color: var(--color-scale-a-6-75);
-  padding: 0.125rem 0.25rem;
+  padding: 0.5rem 0.75rem;
   border-radius: 0.25rem;
+  margin: 0;
 
   &:focus {
     border-color: var(--color-scale-g-5-100);
