--- a/frontend/src/style/_diff.scss
+++ b/frontend/src/style/_diff.scss
@@ -40,6 +40,14 @@
     .btn {
       font-size: 0.9rem;
       padding: 0.5rem 0.9rem;
+
+      &--active {
+        background-color: var(--color-scale-g-7-100);
+
+        &:hover {
+          background-color: var(--color-scale-g-6-100);
+        }
+      }
     }
   }
 
@@ -242,6 +250,30 @@
 
     .diff__hunk-header {
       grid-column: 1 / span 4;
+    }
+
+    .diff__row--yes.diff__row--DiffAddLine,
+    .diff__row--yes.diff__row--DiffDeleteLine,
+    .diff__row--yes.diff__row--DiffContextLine {
+      .diff__line-toggle-minihunk {
+        background-color: var(--color-diff-toggle-bg);
+        background-size: 80%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="rgba(0 0 0 / 25%)" d="M8.22 2.97a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042l2.97-2.97H3.75a.75.75 0 0 1 0-1.5h7.44L8.22 4.03a.75.75 0 0 1 0-1.06Z"/></svg>');
+      }
+    }
+
+    .diff__row--no.diff__row--DiffAddLine,
+    .diff__row--no.diff__row--DiffDeleteLine,
+    .diff__row--no.diff__row--DiffContextLine {
+      .diff__line-toggle-minihunk {
+        background-color: var(--color-diff-toggle-bg-off);
+        background-size: 80%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16"><path fill="rgba(255 255 255 / 10%)" d="M3.72 3.72a.75.75 0 0 1 1.06 0L8 6.94l3.22-3.22a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L9.06 8l3.22 3.22a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L8 9.06l-3.22 3.22a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042L6.94 8 3.72 4.78a.75.75 0 0 1 0-1.06Z"/></svg>');
+      }
     }
 
     .diff__row--hover.diff__row--DiffAddLine,
