--- a/frontend/src/style/_make-commit.scss
+++ b/frontend/src/style/_make-commit.scss
@@ -59,6 +59,18 @@
           background-color: var(--color-scale-r-8-75);
         }
       }
+
+      .merge-conflicts & {
+        background-color: var(--color-scale-n-8-100);
+      
+        &:hover {
+          background-color: var(--color-scale-n-7-100);
+        }
+
+        &:disabled {
+          background-color: var(--color-scale-n-8-75);
+        }
+      }
     }
   }
 }
