wip: conflict selection status

--- a/frontend/src/style/_changes.scss
+++ b/frontend/src/style/_changes.scss
@@ -246,4 +246,12 @@
       }
     }
   }
+
+  &--unresolved {
+    background-color: var(--color-scale-n-7-50);
+
+    &.change--active {
+      background-color: var(--color-scale-n-6-50);
+    }
+  }
 }
